App Update and Additional Components
Updated app after setup. Built some components to help in building the screens and containers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "descrip",
         "devtools",
         "extension",
+        "gramhkpods",
         "koffee",
         "load",
         "logo",
