--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
 		"slug": "koffeeload",
 		"version": "1.0.0",
 		"orientation": "portrait",
-		"icon": "./assets/nacomesLogo.png",
+		"icon": "./assets/logo1.png",
 		"splash": {
-			"image": "./assets/nacomesLogo.png",
+			"image": "./assets/logo1.png",
 			"resizeMode": "contain",
 			"backgroundColor": "#ffffff"
 		},
