App update, last built the home page
Still working hard to finish the app with the little time I have

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,13 @@
         "devtools",
         "extension",
         "gramhkpods",
+        "horiz",
         "koffee",
         "load",
         "logo",
         "nacomes",
         "nav",
+        "padding",
         "png",
         "redux",
         "redux devtools extension",
