--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
 			"supportsTablet": true
 		},
 		"web": {
-			"favicon": "./assets/favicon.png"
+			"favicon": "./assets/logo11.png"
 		}
 	}
 }
