--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "Koffeeload-By-Nick",
-	"description": "This is an app/project I built  as an assessment for Mobile app Developer with Tedbree. The app is to test cleanlinesss of code, simplicity of design, best practices and correctness of implementation. Assessment is for about 5 days .",
+	"description": "This is an app/project I built  as an assessment for Mobile app Developer with Tedbree(A Tech, Marketing and Advertising Company). The app is to test cleanlinesss of code, simplicity of design, best practices and correctness of implementation. Assessment is for about 5 days .",
 	"keywords": [
 		"react.js",
 		"react native",
